src/objects/PSA_Expense_VAT__c.object
<CustomObject>
    <description>This custom object will provide information based on incurred expense location as to whether VAT applies and at what rate</description>
    <fields>
        <fullName>PSA_Expense_Type__c</fullName>
        <description>The standard list of expense types, to help determine whether tax applies</description>
        <label>Expense Type</label>
        <picklist>
            <picklistValues>
                <fullName>Airfare - Domestic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airfare - International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visas/Passport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corp Apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxi/Train/Public Transit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking/Tolls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas for Rental Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Mileage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meals - Self - Breakfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meals - Self - Lunch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meals - Self - Dinner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meals - GW Emp Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meals - With 3rd Parties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meals - Per Diem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertain - GW Emp only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertain - With 3rd Parties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecom - Mobile (Cell)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecom - Non Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currency exch/bank fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excess Baggage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc Expense - T &amp; E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laundry/Dry Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postage/Courier Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relocation Exp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Prep Cost for Addtl State(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tips/Gratuities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dept/Co Meetings &amp; Events</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSA_Incurred_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Country Code for incurred location</description>
        <label>Incurred Country</label>
        <referenceTo>pw_cc__CountryObject__c</referenceTo>
        <relationshipLabel>PSA Expense VATs</relationshipLabel>
        <relationshipName>PSA_Expense_VATs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Incurred_State_Province__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>State / Province Code for incurred location</description>
        <label>Incurred State / Province</label>
        <referenceTo>pw_cc__State__c</referenceTo>
        <relationshipLabel>PSA Expense VATs</relationshipLabel>
        <relationshipName>PSA_Expense_VATs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Is_Reclaimable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For helping determine whether VAT represented in the line can be reclaimable. Note that other factors would apply in making this determination.</description>
        <label>Is Reclaimable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSA_Tax_Type__c</fullName>
        <description>Tax Type</description>
        <inlineHelpText>Tax Type</inlineHelpText>
        <label>Tax Type</label>
        <picklist>
            <picklistValues>
                <fullName>GST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSTBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GQST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSTON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONSUMPTION TAX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PSA Expense VAT</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PSA_Expense_Type__c</columns>
        <columns>PSA_Is_Reclaimable__c</columns>
        <columns>PSA_Tax_Type__c</columns>
        <columns>PSA_Incurred_Country__c</columns>
        <columns>PSA_Incurred_State_Province__c</columns>
        <columns>PSA_Tax_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>GST_Tax_Rate</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>PSA_Expense_Type__c</columns>
        <columns>PSA_Incurred_Country__c</columns>
        <columns>PSA_Incurred_State_Province__c</columns>
        <columns>PSA_Is_Reclaimable__c</columns>
        <columns>PSA_Tax_Rate__c</columns>
        <columns>PSA_Tax_Type__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PSA_Tax_Type__c</field>
            <operation>equals</operation>
            <value>GST</value>
        </filters>
        <label>GST Tax Rate</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PSA_Canada_Rates</fullName>
        <columns>NAME</columns>
        <columns>PSA_Expense_Type__c</columns>
        <columns>PSA_Incurred_Country__c</columns>
        <columns>PSA_Incurred_State_Province__c</columns>
        <columns>PSA_Is_Reclaimable__c</columns>
        <columns>PSA_Tax_Rate__c</columns>
        <columns>PSA_Tax_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PSA_Incurred_Country__c</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <label>PSA Canada Rates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Specifc_Expense_Type</fullName>
        <booleanFilter>1 OR (2 AND 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>PSA_Expense_Type__c</columns>
        <columns>PSA_Incurred_Country__c</columns>
        <columns>PSA_Incurred_State_Province__c</columns>
        <columns>PSA_Is_Reclaimable__c</columns>
        <columns>PSA_Tax_Rate__c</columns>
        <columns>PSA_Tax_Type__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PSA_Expense_Type__c</field>
            <operation>equals</operation>
            <value>Hotel</value>
        </filters>
        <filters>
            <field>PSA_Tax_Rate__c</field>
            <operation>greaterOrEqual</operation>
            <value>0.166</value>
        </filters>
        <filters>
            <field>PSA_Tax_Rate__c</field>
            <operation>lessOrEqual</operation>
            <value>0.167</value>
        </filters>
        <label>Specifc Expense Type</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EV-{0000}</displayFormat>
        <label>PSA Expense VAT Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSA Expense VATs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>